--- a/Rocket_Elevators_REST_API/appsettings.json
+++ b/Rocket_Elevators_REST_API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "dbstring": "Server=codeboxx.cq6zrczewpu2.us-east-1.rds.amazonaws.com;Database=armanadibi;Uid=codeboxx;Pwd=Codeboxx1!;"
+    "dbstring": "Server=codeboxx.cq6zrczewpu2.us-east-1.rds.amazonaws.com;Database=MatthewDandurand;Uid=codeboxx;Pwd=Codeboxx1!;"
   },
   "AllowedHosts": "*"
 }
